Fix date input spacing/position

--- a/app/assets/stylesheets/frontend/forms.scss
+++ b/app/assets/stylesheets/frontend/forms.scss
@@ -200,7 +200,7 @@ textarea {
     .date-input {
       margin-bottom: 1em;
 
-      label {
+      .date-input-field {
         display: inline-block;
         margin-right: 0.75em;
         vertical-align: top;
